<resources>
    <string name="app_name">超聚财</string>
    <string name="all_stock">沪深A全股票</string>
    <string name="no_games_match_filter_options">No games found matching your filter options</string>
    <string name="game_cover">game cover</string>
    <string name="updating_game_database">Updating game database…</string>
    <string name="stock_code">股票编号</string>
    <string name="stock_name">股票名称</string>
    <string name="stock_rate">涨跌幅</string>
    <string name="stock_price">股票价格</string>
    <string name="all_update">更新全股票</string>
    <string name="update_sh_stock">更新沪A股票</string>
    <string name="update_sz_stock">更新深A股票</string>
    <string name="turnover_rate">换手率</string>
    <string name="filter_stock">筛选股票</string>
    <string name="high_quality_stock">优质股票</string>
    <string name="sh_updating">更新沪A股票中。。。</string>
    <string name="sz_updating">更新深A股票中。。。</string>
    <string name="filter_detail">筛选条件</string>
    <string name="stock_type">股票类型</string>
    <string name="stock_sh_a">沪市A股</string>
    <string name="stock_sh_b">沪市B股</string>
    <string name="stock_cy">创业板</string>
    <string name="stock_kc">科创板</string>
    <string name="stock_sz">深市A股</string>
    <string name="stock_zxb">中小板</string>
    <string name="stock_sz_b">深市B股</string>
    <string name="stock_diff_rate">涨跌幅度</string>
    <string name="stock_sort">股票排序</string>
    <string name="trade_num">成交量</string>
    <string name="sort_asc">降序</string>
    <string name="sort_desc">升序</string>
    <string name="add_stock_price">加入时股票价</string>
    <string name="now_stock_price">当前股票价</string>
    <string name="k_line_type">K线类型</string>
    <string name="delete">删除</string>
    <string name="stock_total_rate">总涨跌幅</string>
    <string name="next_day_max_price_rate">次日最高涨幅</string>
    <string name="next_day_now_price_rate">次日收盘涨幅</string>
    <string name="favorite_title">K\n线\n测\n试</string>
    <string name="min_kline">分时K线</string>
    <string name="weekly_kline">周K线</string>
    <string name="daily_kline">日K线</string>
    <string name="month_kline">月K线</string>
    <string name="search_hint">输入股票代码、名称、简拼或关键字</string>
    <string name="update_stock_info">更新股票基本信息</string>
    <string name="updating_stock_info">更新股票基本信息中。。。</string>
    <string name="update_stock_report">更新年报</string>
    <string name="updating_stock_report">更新年报中。。。</string>
    <string name="key_stock">重点打击对象</string>
    <string name="target_rate">目标盈利</string>
    <string name="buy_status">购买状态</string>
    <string name="current_rate">当前涨幅</string>
    <string name="max_profit">最高收益</string>
    <string name="voice_type">语音播报</string>
    <string name="music_type">音乐提示</string>
    <string name="none_type">免打扰模式</string>
    <string name="statistics_button">查看统计数据</string>
    <string name="update_history">更新历史数据</string>
    <string name="updating_history">更新历史数据中...</string>
    <string name="calculate_stock">重新计算全数据</string>
</resources>